# LLM-Local-Lab

./: .gitignore  CLAUDE.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: benchmark-analyst.md  documentation-writer.md  gpu-optimizer.md  model-configurator.md  test-architect.md
.claude/hooks/: auto-commit-results.sh  post-benchmark.sh  pre-benchmark.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-request.yml  bug-report.yml  feature-request.yml
.github/workflows/: benchmark-report.yml  ci-validation.yml  release.yml
benchmarks/results/raw/: embedding_output_20251002.txt
benchmarks/scripts/: embedding_benchmark.py  llm_inference_benchmark.py
docs/: README.md
docs/code-reference/: api-index.md
docs/hardware/: system-specs.md
docs/models/: local-models-inventory.md  models-registry.md
docs/testing/: strategy_embedding_benchmark_20251002.md  test-suite-reference.md
docs/workflows/: agent-usage.md  ci-cd-guide.md  rpvea-agent-integration.md
tests/integration/: test_embedding_pipeline_20251002.py
tests/post/: test_embedding_success_20251002.py
tests/pre/: test_embedding_prereqs_20251002.py
